# SSAFY

./: .gitignore  README.md
Day1017/: README.md  calCulator.py  checkBox.py  checkBox2.py  dial.py  drawingBoard.py  helloQT.py  imgLoad.py  like_hate.py
Image Processing/OpenCV1/: code.py
Machine_Learning_Basic/face_recog/: face_recognizer_node.py
Machine_Learning_Basic/knn/: knn.py
Machine_Learning_Basic/qr_recog/: qr_code_detection_node.py
Object Detection with YOLO/pb1/: hw1.py
Object Detection with YOLO/pb4/: hw4.py
Object Detection with YOLO/pb6/: problem6.py
Object Detection with YOLO/pb7/: face_pub.py  face_pub_string.py
RGBD with openCV/: depth.py  find_Red.py  recog_hand.py  rectangle&centerPoint_Red.py  rectangle_Red.py  temp.py
RGBD_with_Dobot/: READMD.md  client.py  dobot.py  raspberry.py  recog_rgb.py  server.py
RGBD_with_openCV/: READ.MD  클라이언트 _J1C 소켓 통신.py
ROS 시스템 통합/: README.md  package.xml  setup.py
RoboDK/: MoveBox.rdk  ReadMe.md  명령어.txt
vision with socket/: accel_gyro_stream.py  accel_gyro_stream_corrcetion.py  accel_socket2.py  basic_socket.py  gyro_socket1.py  gyro_stream.py  hand_recog6.py  import pytesseract3.py  rock_scissors_paper7.py  server.py  text_recog_stream4.py
로봇모델링/src/urdf_example/: package.xml  setup.py
로봇모델링/src/urdf_example/launch/: robot.launch.py
로봇모델링/src/urdf_example/rviz/: prac2.rviz  urdf_practice.rviz
로봇모델링/src/urdf_example/urdf/: robot1.urdf  robot2.urdf  robot3(backup).urdf  robot3.urdf
물체 파지 with yolo,socket/: 1_client.py  1_server.py
임베디드 키트 활용 App(Socket, Rasp)/: README.md  UI.pptx
(+203 files in other folders)
